--- a/icon.html
+++ b/icon.html
@@ -11,7 +11,9 @@
 <body>
     <div class="outer">
         <div class="inner">
-            <div class="icon"></div>
+            <div class="icon">
+              <h2>Be</h2><i class="fas fa-beer"></i>  
+            </div>
         </div>
     </div>
 </body>
